Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-1781

esi plugin fails to build under clang/trunk

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 3.3.2
    • Build, Plugins
    • None

    Description

        CXX    EsiProcessor.lo
      lib/EsiProcessor.cc:425:44: error: comparison of constant 'STATUS_ERROR' (-1) with expression of type 'bool' is always false [-Werror,-Wtautological-constant-out-of-range-compare]
              if (!_getIncludeStatus(*node_iter) == STATUS_ERROR) {
                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^  ~~~~~~~~~~~~
      1 error generated.
      make[3]: *** [EsiProcessor.lo] Error 1
      

      Attachments

        Activity

          People

            i.galic Igor Galić
            i.galic Igor Galić
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: