TS-1781: Make clang happy and esi compile